tests/paczka1/small_fuzzy/88323042.err
Error in line 2: 23FPfv1 A338 75,6
Error in line 9: A338 A338 58,5
